# skinmate

./: .gitignore  Dockerfile.seeder  README.md  docker-compose.yml  pyproject.toml  skinmate-consensus-plan.md  team-agreement.md
.github/workflows/: ci.yml
db/initdb/: 00-extensions.sql  03-graph-ontology.sql  05-traverse_cache.sql  06-restore.sh
db/migrations/: 001_core_knowledge.sql  002_memory_and_rls.sql  003_graph_ontology.sql  004_app_role_and_grants.sql  005_traverse_cache.sql  README.md
docs/: ACCEPTANCE-TESTING.md  DATA-MODEL.md  EMBED-CRAWL-SPEC.md  ENVIRONMENT.md  PRD.md  WBS.md
eval/: __init__.py
eval/fixtures/: .gitkeep  importance_labels.jsonl  weight_fixture.json
eval/fixtures/llm_recordings/: extract.json
ingest/: __init__.py  crawler.py  crawler_docs.py  normalize.py  normalize_edit.py
ingest/sources/: __init__.py
scripts/: apply-migrations.sh  benchmark_search.py  embed_data.py  graphrag_extract_full.py  graphrag_extract_slice.py  graphrag_rebuild.py  graphrag_slice.py  merge_duplicate_ingredients.py  populate_graph.py  refetch_article_content.py  schema-smoke.sh  seed_fixtures.py
src/skinmate/: __init__.py  config.py  db.py  errors.py
src/skinmate/app/: __init__.py  main.py  turn.py
src/skinmate/chat/: __init__.py  funnel.py  rationale.py
src/skinmate/contracts/: __init__.py  graph.py  refs.py
src/skinmate/documents/: __init__.py  embed.py  search.py
src/skinmate/graph/: __init__.py  choke.py  knowledge_populate.py  traverse.py
src/skinmate/knowledge/: __init__.py  hard_filter.py
src/skinmate/llm/: __init__.py  base.py  claude.py  gemini.py
src/skinmate/llm/prompts/: extract_facts.txt  generate_rationale.txt
src/skinmate/memory/: __init__.py  bridge.py  crud.py  extract.py  rank.py  repo.py
src/skinmate/retrieval/: __init__.py  retrieve.py
src/skinmate/write/: __init__.py  writer.py
tests/: conftest.py  test_db.py  test_normalize.py  test_search.py  test_skeleton.py
tests/app/: test_atomicity_fault_injection.py  test_avoidance_random_suite.py  test_isolation_cross_user.py  test_turn.py
tests/chat/: test_rationale.py
tests/graph/: test_knowledge_populate.py  test_traverse.py
tests/knowledge/: test_hard_filter.py
tests/memory/: test_bridge.py  test_extract.py  test_extract_live.py  test_rank.py
tests/retrieval/: test_retrieve.py
tests/write/: test_writer.py
