[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skinmate"
version = "0.1.0"
description = "기억·지식·관계그래프 기반 대화형 화장품 추천 시스템"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",   # DB 드라이버 (명시적 트랜잭션 제어)
    "pgvector>=0.3",          # vector 타입 어댑터
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",            # 크롤/HTTP
    "anthropic>=0.40",        # Claude API (llm/ 추상화 뒤)
    "structlog>=24.1",        # 구조화 로깅
    "pydantic>=2.6",          # contracts 데이터 형식
    "pydantic-settings>=2.2", # 환경변수 설정
]

[project.optional-dependencies]
# 임베딩(bge-m3)은 무거우므로 별도 extra — 로컬/컨테이너에서만 설치 (⭐9d)
embed = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── 정적 도구 (CI 게이트) ──────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "ingest", "eval", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]  # pyflakes/pycodestyle/isort/pyupgrade/bugbear/simplify

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# 점진 적용: 서드파티 스텁 없는 모듈은 무시
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
