[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skinmate"
version = "0.1.0"
description = "기억·지식·관계그래프 기반 대화형 화장품 추천 시스템"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",   # DB 드라이버 (명시적 트랜잭션 제어)
    "pgvector>=0.3",          # vector 타입 어댑터
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",            # 크롤/HTTP
    "google-genai>=1.0",      # Gemini API 기본 (llm/ 추상화 뒤)
    "anthropic>=0.40",        # Claude API 대체 구현
    "structlog>=24.1",        # 구조화 로깅
    "pydantic>=2.6",          # contracts 데이터 형식
    "pydantic-settings>=2.2", # 환경변수 설정
    "beautifulsoup4>=4.12",   # HTML 파서
]

[project.optional-dependencies]
# 임베딩(bge-m3)은 무거우므로 별도 extra — 로컬/컨테이너에서만 설치 (⭐9d)
embed = [
    "sentence-transformers>=3.0",
]
# 크롤 대상 아티클 페이지가 클라이언트사이드 렌더링(SPA)이라 httpx 만으로는 본문을
# 못 가져온다 — headless 브라우저 렌더링이 필요한 경우에만 설치하는 별도 extra.
crawl = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── 정적 도구 (CI 게이트) ──────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "ingest", "eval", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]  # pyflakes/pycodestyle/isort/pyupgrade/bugbear/simplify

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# 점진 적용: 서드파티 스텁 없는 모듈은 무시
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
